Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P1: Critical
-
Resolution: Done
-
Affects Version/s: 5.3.0 Beta1
-
Fix Version/s: 5.3.0 RC1
-
Component/s: GUI: Font handling, WebKit
-
Labels:None
-
Environment:Windows
-
Commits:fec19027a508f7f6b7711d844b0f5a42bb0d4e83
Description
In Qt 5.3 Beta 1 the display of Asian text is broken. It was working well in 5.3 Alpha and in 5.2.1.
I have tested with fancybrowser demo from qtwebkit-examples\examples\webkitwidgets . When I load the http://www.google.co.th/ some squares are displayed instead of text characters. More examples can be found if you try to display the http://www.wikipedia.org/. Many of the texts in various languages are replaced by squares.
Attachments
Issue Links
- is required for
-
QTBUG-37065 Issues to be fixed before 5.3.0 RC1 release
-
- Closed
-
- resulted from
-
QTBUG-36628 Font substitution does not work for glyph fallback
-
- Closed
-
For Gerrit Dashboard: QTBUG-37836 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
81983,1 | Make QWindowsMultiFontEngine support deferred fallback families query | stable | qt/qtbase | Status: MERGED | +2 | 0 |
83393,1 | Fix font merging for complex scripts on Windows | release | qt/qtbase | Status: MERGED | +2 | 0 |