Make QWindowsMultiFontEngine support deferred fallback families query

This finishes 800232e1d3ebfbac28d07014a3c646ea00fcf6ad, which encovered
a tricky issue in QFontEngineMultiQPA::createMultiFontEngine().

Task-number: QTBUG-37836
Change-Id: I6d432e09e755f5d9ded09752c4c092f4857ad224
Reviewed-by: Pierre Rossi <pierre.rossi@gmail.com>
Reviewed-by: Lars Knoll <lars.knoll@digia.com>